# Frama-C-StaDy

./: .gitignore  CWCE.ml  CWCE.mli  Changelog  Changelog.md  INSTALL  Makefile  Makefile.in  NCCE.ml  NCCE.mli  README  README.md  SWCE.ml  SWCE.mli  configure.ac  debug.ml  debug.mli  env.ml  env.mli  externals.c  function.ml  function.mli  gmp.c  infer.ml  infer.mli  inline.ml  inline.mli  inline_spec.ml  input_domain.ml  input_domain.mli  insertion.ml  insertion.mli  insertions.ml  insertions.mli  label.ml  native_precond.ml  nondet.c  options.ml  options.mli  pcva_printer.ml  (+33 more)
doc/: README.md  methodology.md  motivation.md  non-compliance-detection-example.md  subcontract-weakness-detection-example.md
doc/devman/: Makefile  devman.tex  frama-c-book.hva  hevea.css
doc/manual/: FigVerifFuncCall.tex  Makefile  frama-c-book.cls  macros.tex  manual.bib  manual.tex
doc/userman/: Makefile  macros.hva
mem_model/: model.c  opti_model.c  out.pl  out2.pl  out3.pl
share/: externals.h  nondet.c
tests/: ptests_config  test_config.in
tests/all4/: all4.c
tests/behaviors/: behaviors.c
tests/binary_search/: binary_search.c
tests/bubble_sort/: bubble_sort.c
tests/deleteSubstr0/: deleteSubstr0.c
tests/deleteSubstr1a/: deleteSubstr1a.c
tests/deleteSubstr1b/: deleteSubstr1b.c
tests/deleteSubstr1c/: deleteSubstr1c.c
tests/deleteSubstr1d/: deleteSubstr1d.c
tests/deleteSubstr2a/: deleteSubstr2a.c
tests/deleteSubstr2b/: deleteSubstr2b.c
tests/deleteSubstr2c/: deleteSubstr2c.c
tests/deleteSubstr3/: deleteSubstr3.c
tests/deleteSubstr4/: deleteSubstr4.c
tests/first_subset/: first_subset.c  first_subset.c~
tests/insertion_sort/: insertion_sort.c
tests/inv_insuf_ko/: inv_insuf_ko.c
tests/inv_insuf_ok/: inv_insuf_ok.c
tests/inv_preserved/: inv_preserved.c
tests/merge_arrays/: merge_arrays.c
tests/merge_sort/: merge_sort.c
tests/next_subset/: next_subset.c
tests/num_of/: num_of.c
(+122 files in other folders)
